// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expenses summary for multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    24
     
    expenses
     totalling 
    £1,234,567.89
  </h1>
</div>
`;

exports[`should render expenses summary for one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    £1.23
  </h1>
</div>
`;
